--- a/app.html
+++ b/app.html
@@ -56,7 +56,7 @@
 
         <!-- Service part of the website -->
 
-        <section id="services" class="container mx-auto px-4 ">
+        <section id="services" class="container mx-auto sm:px-4 ">
             <div class="text-center my-12">
                 <span class="text-4xl font-semibold border-b-4 border-indigo-500">Our Services</span>
             </div>
