website name, file name changed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="bg-black text-white h-12 flex items-center justify-center">
-            <p class="text-xl">R E V A M P</p>
+            <p class="text-xl">WM solution</p>
         </div>
     </header>
 
