--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REVAMP</title>
-    <link rel="stylesheet" href="app.css">
+    <title>V&M solution</title>
+    <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.2/dist/flowbite.min.css" />
 
@@ -21,21 +21,26 @@
 <body>
     <header>
         <div class="bg-black text-white h-12 flex items-center justify-center">
-            <p class="text-xl">WM solution</p>
+            <p class="text-xl">W&M solution</p>
         </div>
     </header>
 
     <main>
         <!-- Head part of the website -->
-        <section id="top-side" class="half-page sm:flex sm:items-center sm:justify-center">
-            <div class="sm:w-2/4 pl-20 pr-20">
-                <h1 class="text-5xl leading-normal">Description</h1>
-                <p class="text-xl leading-normal">ভাইবাচিন্তা জোস কিছু একটা বের করা লাগবে</p>
+        <section id="top-side" class="half-page sm:flex sm:items-center sm:justify-ceneter">
+            <div class="sm:w-2/4 pl-20 pr-20 pt-12">
+                <h1 class="text-3xl sm:text-5xl">Web & Marketing </h1>
+                <h1 class="text-3xl sm:text-5xl">Solution</h1>
+                <p class="text-xl leading-8">Looking for a one stop solution for the digital assistance for your
+                    business or social media? You may just have come to the best & most efficient placeout there. We
+                    provide top quality services at the best price. Your success matters just as much to us as it does
+                    to you. We are a promising service provider & we want to make our dreams come true by providing you
+                    with the best.</p>
                 <h3 class="inline-block border-b-2 border-indigo-500 cursor-pointer text-2xl"
                     data-modal-toggle="authentication-modal">Register for a service</h3>
             </div>
 
-            <div class="sm:w-2/4 pl-20 pr-20">
+            <div class="hidden md:block sm:w-2/4 pl-20 pr-20">
                 <img class="w-full" src="images/undraw_online_stats_0g94.png" alt="">
             </div>
         </section>
@@ -48,8 +53,8 @@
             </div>
 
             <div class=" sm:w-2/4 pl-20 pr-20">
-                <h2 class="text-3xl leading-normal">Cheap but quality solution?</h2>
-                <p class="text-xl leading-normal">We are here to help. Just book a service. We'll reach out to you</p>
+                <h2 class="text-3xl leading-8">Cheap but quality solution?</h2>
+                <p class="text-xl leading-8">We are here to help. Just book a service. We'll reach out to you</p>
                 <h3>Check out our <a class="services-effect" href="#services">services</a></h3>
             </div>
 
@@ -67,10 +72,11 @@
                 <img class="w-full sm:w-2/5" src="images/web_design.png" alt="">
                 <div>
                     <h3 class="text-3xl">
-                        <span class="services-effect text-teal-500 leading-normal">Web
+                        <span class="services-effect text-teal-500 leading-8">Web
                             Development</span>
                     </h3>
-                    <p class="text-xl leading-normal">We provide web design and development with React JS. We can create websites as
+                    <p class="text-xl leading-8">We provide web design and development with React JS. We can create
+                        websites as
                         you desire.</p>
                 </div>
             </div>
@@ -79,9 +85,10 @@
                 data-modal-toggle="authentication-modal">
                 <div>
                     <h3 class="text-3xl">
-                        <span class="services-effect text-teal-500 leading-normal">Marketing Solution</span>
+                        <span class="services-effect text-teal-500 leading-8">Marketing Solution</span>
                     </h3>
-                    <p class="text-xl leading-normal">Are you worried about reaching audience in social media? Not to worry because
+                    <p class="text-xl leading-8">Are you worried about reaching audience in social media? Not to worry
+                        because
                         you're in the right
                         place.</p>
                 </div>
@@ -93,9 +100,10 @@
                 <img class="w-full sm:w-2/5" src="images/post_design.png" alt="">
                 <div>
                     <h3 class="text-3xl text-teal-500">
-                        <span class="services-effect text-teal-500 leading-normal">Creative Design</span>
+                        <span class="services-effect text-teal-500 leading-8">Creative Design</span>
                     </h3>
-                    <p class="text-xl leading-normal">Are you thinking to make your product posts more creative, but you have no idea?
+                    <p class="text-xl leading-8">Are you thinking to make your product posts more creative, but you
+                        have no idea?
                         We can help you
                         with
                         that.</p>
@@ -122,7 +130,8 @@
                         <div class="py-6 px-6 lg:px-8">
                             <h3 class="mb-4 text-xl font-medium text-gray-900 dark:text-white">Tell us the service you
                                 want</h3>
-                            <form class="space-y-6" action="https://formsubmit.co/faa20e782c4d1a12e2f50f70807df434" method="POST">
+                            <form class="space-y-6" action="https://formsubmit.co/faa20e782c4d1a12e2f50f70807df434"
+                                method="POST">
                                 <div>
                                     <label for="email"
                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Your
@@ -135,7 +144,7 @@
                                     <label for="socialMedia"
                                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Social
                                         media
-                                        presence</label>
+                                        presence for contact</label>
                                     <input type="text" name="socialMedia" id="socialMedia"
                                         placeholder="www.facebook.com/yourPageName"
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
