--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <div class="py-6 px-6 lg:px-8">
                             <h3 class="mb-4 text-xl font-medium text-gray-900 dark:text-white">Tell us the service you
                                 want</h3>
-                            <form class="space-y-6" action="https://formsubmit.co/faa20e782c4d1a12e2f50f70807df434"
+                            <form class="space-y-6" action="https://formsubmit.co/wandmsolution@gmail.com"
                                 method="POST">
                                 <div>
                                     <label for="email"
