meta tag, email update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="google-site-verification" content="1kmRWOTeAneIDPOi4uSYTVbbEEBOQ-6MjUq3f4O8xOU" />
+    <meta name="google-site-verification" content="dsYUkLf5aaUluuRfnMZh65aX0_pwfC60X6yCkXoiAU8" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -130,7 +130,7 @@
                         <div class="py-6 px-6 lg:px-8">
                             <h3 class="mb-4 text-xl font-medium text-gray-900 dark:text-white">Tell us the service you
                                 want</h3>
-                            <form class="space-y-6" action="https://formsubmit.co/faa20e782c4d1a12e2f50f70807df434"
+                            <form class="space-y-6" action="https://formsubmit.co/wandmsolution@gmail.com"
                                 method="POST">
                                 <div>
                                     <label for="email"
